k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: astrovox
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
    app.kubernetes.io/managed-by: ArgoCD
    network.alpha.kubernetes.io/default-deny: "true"
